--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
                 id: null, title: '', client: '', contactRef: '',
                 date: new Date().toISOString().split('T')[0], hours: '',
                 category: 'MANTENIMENTO RAPPORTO', contactType: 'TELEFONICO', description: '',
-                futureNotes: '', nextContactDate: '', nextContactTime: '', createdAt: null, completed: false 
+                futureNotes: '', nextContactDate: '', nextContactTime: '', 
+                calendarEventType: 'APPUNTAMENTO', // Nuova proprietà per il tipo di evento calendario
+                createdAt: null, completed: false 
             };
             const [reportForm, setReportForm] = useState(initialReportState);
 
@@ -612,14 +614,25 @@
 
             const addToGoogleCalendar = (report) => {
                 if (!report.nextContactDate) return;
+                
+                // Determina tipo e durata
+                const eventType = report.calendarEventType || 'APPUNTAMENTO';
+                let durationMinutes = 60; // Default 1 ora
+                if (eventType === 'PROMEMORIA') durationMinutes = 5;
+                if (eventType === 'TELEFONATA') durationMinutes = 15;
+
                 const startTime = report.nextContactTime || '09:00';
                 const startDateTime = new Date(`${report.nextContactDate}T${startTime}`);
-                const endDateTime = new Date(startDateTime.getTime() + 60 * 60 * 1000);
+                const endDateTime = new Date(startDateTime.getTime() + durationMinutes * 60 * 1000);
 
                 const formatDate = (date) => date.toISOString().replace(/-|:|\.\d{3}/g, '');
 
-                const title = encodeURIComponent(`Contatto: ${report.client} - ${report.category}`);
-                const details = encodeURIComponent(`Tipo: ${report.contactType || 'N/A'}\nNote: ${report.futureNotes}`);
+                // Costruzione Titolo: [TIPO] - [CLIENTE] - [NOTE]
+                // "la voce selezionata sarà messa al posto di quella attuale CATEGORIA e subito dopo l'appunto futuro"
+                const titleText = `${eventType} ${report.futureNotes} - ${report.client}`;
+                const title = encodeURIComponent(titleText);
+                
+                const details = encodeURIComponent(`Tipo CRM: ${report.contactType || 'N/A'}\nNote: ${report.futureNotes}\nCliente: ${report.client}`);
                 const dates = `${formatDate(startDateTime)}/${formatDate(endDateTime)}`;
 
                 const url = `https://calendar.google.com/calendar/render?action=TEMPLATE&text=${title}&details=${details}&dates=${dates}`;
@@ -855,9 +868,55 @@
                 ].filter(c => c && c.nome && c.nome.trim() !== '') : [];
 
                 return (
-                    <div className="animate-fade-in pb-32" onTouchStart={onTouchStart} onTouchMove={onTouchMove} onTouchEnd={onTouchEnd}><h2 className="text-xl font-bold text-gray-800 mb-6">{reportForm.id ? 'Modifica' : 'Nuovo'} Report</h2><form onSubmit={handleReportSubmit} className="space-y-5 bg-white p-5 rounded-2xl shadow-sm border border-gray-100"><SectionContainer title="Dati" icon={FileText}><div><label className="block text-sm font-bold text-gray-700 mb-1">Cliente *</label><select required name="client" value={reportForm.client} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option value="">Seleziona...</option>{sortedClients.map(c => <option key={c.id} value={c.ragioneSociale}>{c.ragioneSociale}</option>)}</select></div>
-                    {availableContacts.length > 0 && (<div><label className="block text-sm font-bold text-gray-700 mb-1">Referente / Contatto</label><select name="contactRef" value={reportForm.contactRef} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option value="">Nessun referente specifico</option>{availableContacts.map((c, idx) => (<option key={idx} value={c.nome}>{c.nome} {c.mansione ? `(${c.mansione})` : ''}</option>))}</select></div>)}
-                    <div className="grid grid-cols-1 md:grid-cols-2 gap-4"><Input label="Data" type="date" name="date" value={reportForm.date} onChange={handleReportChange} required /><Input label="Ore" type="number" step="0.5" name="hours" value={reportForm.hours} onChange={handleReportChange} required /></div><div><label className="block text-sm font-bold text-gray-700 mb-1">Categoria</label><select name="category" value={reportForm.category} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option>MANTENIMENTO RAPPORTO</option><option>ORDINE</option><option>RICHIESTA DI OFFERTA</option><option>RISCONTRO OFFERTA</option><option>COMUNICAZIONE</option><option>INIZIO RAPPORTO FORNITURE</option><option>SOLLECITO INIZIO FORNITURA</option><option>APPUNTAMENTO</option><option>ALTRO</option></select></div><div><label className="block text-sm font-bold text-gray-700 mb-1">Tipo Contatto</label><select name="contactType" value={reportForm.contactType} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option>TELEFONICO</option><option>APPUNTAMENTO</option><option>VISITA</option><option>LINKEDIN</option><option>WHATSAPP</option><option>CANTIERE</option><option>ALTRO</option></select></div><TextArea label="Descrizione" name="description" value={reportForm.description} onChange={handleReportChange} /></SectionContainer><SectionContainer title="Follow-up" icon={AlarmCheck}><TextArea label="Appunti Futuri" name="futureNotes" value={reportForm.futureNotes} onChange={handleReportChange} /><div className="grid grid-cols-1 md:grid-cols-2 gap-4"><Input label="Prossimo Contatto" type="date" name="nextContactDate" value={reportForm.nextContactDate} onChange={handleReportChange} /><Input label="Orario" type="time" name="nextContactTime" value={reportForm.nextContactTime} onChange={handleReportChange} /></div>{reportForm.nextContactDate && (<button type="button" onClick={() => addToGoogleCalendar({...reportForm, id: reportForm.id || 'temp'})} className="mt-3 w-full flex justify-center items-center gap-2 px-3 py-3 bg-indigo-50 text-indigo-600 font-bold rounded-xl border border-indigo-100 active:scale-[0.98] transition-all hover:bg-indigo-100"><Calendar size={18} /> Apri Calendario</button>)}</SectionContainer><div className="pt-2 flex gap-3"><button type="button" onClick={() => setView('dashboard')} className="flex-1 py-3 bg-gray-100 text-gray-700 font-bold rounded-xl active:scale-[0.98]">Annulla</button><button type="submit" className="flex-1 py-3 bg-blue-600 text-white font-bold rounded-xl shadow-lg shadow-blue-200 active:scale-[0.98] flex justify-center items-center gap-2"><Save size={18} /> Salva</button></div></form></div>
+                    <div className="animate-fade-in pb-32" onTouchStart={onTouchStart} onTouchMove={onTouchMove} onTouchEnd={onTouchEnd}>
+                        <h2 className="text-xl font-bold text-gray-800 mb-6">{reportForm.id ? 'Modifica' : 'Nuovo'} Report</h2>
+                        <form onSubmit={handleReportSubmit} className="space-y-5 bg-white p-5 rounded-2xl shadow-sm border border-gray-100">
+                            <SectionContainer title="Dati" icon={FileText}>
+                                <div><label className="block text-sm font-bold text-gray-700 mb-1">Cliente *</label><select required name="client" value={reportForm.client} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option value="">Seleziona...</option>{sortedClients.map(c => <option key={c.id} value={c.ragioneSociale}>{c.ragioneSociale}</option>)}</select></div>
+                                {availableContacts.length > 0 && (<div><label className="block text-sm font-bold text-gray-700 mb-1">Referente / Contatto</label><select name="contactRef" value={reportForm.contactRef} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option value="">Nessun referente specifico</option>{availableContacts.map((c, idx) => (<option key={idx} value={c.nome}>{c.nome} {c.mansione ? `(${c.mansione})` : ''}</option>))}</select></div>)}
+                                <div className="grid grid-cols-1 md:grid-cols-2 gap-4"><Input label="Data" type="date" name="date" value={reportForm.date} onChange={handleReportChange} required /><Input label="Ore" type="number" step="0.5" name="hours" value={reportForm.hours} onChange={handleReportChange} required /></div>
+                                <div><label className="block text-sm font-bold text-gray-700 mb-1">Categoria</label><select name="category" value={reportForm.category} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option>MANTENIMENTO RAPPORTO</option><option>ORDINE</option><option>RICHIESTA DI OFFERTA</option><option>RISCONTRO OFFERTA</option><option>COMUNICAZIONE</option><option>INIZIO RAPPORTO FORNITURE</option><option>SOLLECITO INIZIO FORNITURA</option><option>APPUNTAMENTO</option><option>ALTRO</option></select></div>
+                                <div><label className="block text-sm font-bold text-gray-700 mb-1">Tipo Contatto</label><select name="contactType" value={reportForm.contactType} onChange={handleReportChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-shadow"><option>TELEFONICO</option><option>APPUNTAMENTO</option><option>VISITA</option><option>LINKEDIN</option><option>WHATSAPP</option><option>CANTIERE</option><option>ALTRO</option></select></div>
+                                <TextArea label="Descrizione" name="description" value={reportForm.description} onChange={handleReportChange} />
+                            </SectionContainer>
+                            <SectionContainer title="Follow-up" icon={AlarmCheck}>
+                                {/* NUOVA SELEZIONE TIPO CALENDARIO */}
+                                <div>
+                                    <label className="block text-sm font-bold text-gray-700 mb-2">Tipo Promemoria</label>
+                                    <div className="flex gap-2 mb-3">
+                                        {['APPUNTAMENTO', 'PROMEMORIA', 'TELEFONATA'].map(type => (
+                                            <button
+                                                key={type}
+                                                type="button"
+                                                onClick={() => setReportForm(prev => ({ ...prev, calendarEventType: type }))}
+                                                className={`flex-1 py-3 text-xs font-bold rounded-lg border transition-all active:scale-95 ${
+                                                    reportForm.calendarEventType === type
+                                                    ? 'bg-blue-600 text-white border-blue-600 shadow-md'
+                                                    : 'bg-white text-gray-600 border-gray-200 hover:bg-gray-50'
+                                                }`}
+                                            >
+                                                {type}
+                                            </button>
+                                        ))}
+                                    </div>
+                                </div>
+                                <TextArea label="Appunti Futuri" name="futureNotes" value={reportForm.futureNotes} onChange={handleReportChange} />
+                                <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
+                                    <Input label="Prossimo Contatto" type="date" name="nextContactDate" value={reportForm.nextContactDate} onChange={handleReportChange} />
+                                    <Input label="Orario" type="time" name="nextContactTime" value={reportForm.nextContactTime} onChange={handleReportChange} />
+                                </div>
+                                {reportForm.nextContactDate && (
+                                    <button type="button" onClick={() => addToGoogleCalendar({...reportForm, id: reportForm.id || 'temp'})} className="mt-3 w-full flex justify-center items-center gap-2 px-3 py-3 bg-indigo-50 text-indigo-600 font-bold rounded-xl border border-indigo-100 active:scale-[0.98] transition-all hover:bg-indigo-100">
+                                        <Calendar size={18} /> Apri Calendario ({reportForm.calendarEventType})
+                                    </button>
+                                )}
+                            </SectionContainer>
+                            <div className="pt-2 flex gap-3">
+                                <button type="button" onClick={() => setView('dashboard')} className="flex-1 py-3 bg-gray-100 text-gray-700 font-bold rounded-xl active:scale-[0.98]">Annulla</button>
+                                <button type="submit" className="flex-1 py-3 bg-blue-600 text-white font-bold rounded-xl shadow-lg shadow-blue-200 active:scale-[0.98] flex justify-center items-center gap-2"><Save size={18} /> Salva</button>
+                            </div>
+                        </form>
+                    </div>
                 );
             };
 
