--- a/index.html
+++ b/index.html
@@ -453,6 +453,34 @@ END:VCALENDAR`;
             );
         };
 
+        const IdeaForm = () => {
+            const { ideaForm: initialData, saveIdea, setView, clients } = useContext(CRMContext);
+            const [formData, setFormData] = useState(initialData);
+
+            const handleChange = (e) => {
+                const { name, value } = e.target;
+                setFormData(prev => ({ ...prev, [name]: value }));
+            };
+
+            return (
+                <div className="animate-fade-in pb-32">
+                    <h2 className="text-xl font-bold text-gray-800 mb-6">{formData.id ? 'Modifica Idea' : 'Nuova Idea'}</h2>
+                    <form onSubmit={(e) => { e.preventDefault(); saveIdea(formData); }} className="space-y-5 bg-white p-5 rounded-2xl shadow-sm border border-gray-100">
+                        <SectionContainer title="Dettagli Progetto" icon={Icons.Lightbulb}>
+                            <div><label className="block text-sm font-bold text-gray-700 mb-1">Cliente *</label><select required name="client" value={formData.client} onChange={handleChange} className="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl outline-none"><option value="">Seleziona...</option>{clients.map(c => <option key={c.id} value={c.ragioneSociale}>{c.ragioneSociale}</option>)}</select></div>
+                            <TextArea label="Descrizione Idea" name="text" value={formData.text} onChange={handleChange} placeholder="Descrivi la tua idea o progetto..." />
+                            <Input label="Data Scadenza" type="date" name="deadline" value={formData.deadline} onChange={handleChange} required />
+                            <CalendarButton title={`Idea: ${formData.client}`} details={formData.text} date={formData.deadline} />
+                        </SectionContainer>
+                        <div className="pt-2 flex gap-3">
+                            <button type="button" onClick={() => setView('ideas')} className="flex-1 py-3 bg-gray-100 text-gray-700 font-bold rounded-xl">Annulla</button>
+                            <button type="submit" className="flex-1 py-3 bg-blue-600 text-white font-bold rounded-xl shadow-lg flex justify-center gap-2"><Icons.Save size={18} /> Salva</button>
+                        </div>
+                    </form>
+                </div>
+            );
+        };
+
         const IdeasList = () => {
             const { ideas, toggleSort, sortOrder, setIdeaForm, setView, deleteItem } = useContext(CRMContext);
             const [search, setSearch] = useState('');
@@ -863,6 +891,15 @@ END:VCALENDAR`;
 
             const maxValue = Math.max(...data.map(d => d.value), 0);
 
+            // NEW HELPER
+            const formatHours = (val) => {
+                const h = Math.floor(val);
+                const m = Math.round((val - h) * 60);
+                if (h > 0 && m > 0) return `${h}h ${m}m`;
+                if (h > 0) return `${h}h`;
+                return `${m}m`;
+            }
+
             return (
                 <div className="animate-fade-in pb-32">
                     <header className="mb-6"><h1 className="text-2xl font-bold text-gray-800">Situazione</h1></header>
@@ -873,7 +910,7 @@ END:VCALENDAR`;
                                 <div key={d.name}>
                                     <div className="flex justify-between text-sm mb-1">
                                         <span className="font-medium text-gray-700 truncate w-3/4">{d.name}</span>
-                                        <span className="font-bold text-blue-600">{d.value.toFixed(2)}h</span>
+                                        <span className="font-bold text-blue-600">{formatHours(d.value)}</span>
                                     </div>
                                     <div className="w-full bg-gray-100 rounded-full h-2.5">
                                         <div className="bg-blue-600 h-2.5 rounded-full transition-all duration-500" style={{ width: `${maxValue > 0 ? (d.value / maxValue) * 100 : 0}%` }}></div>
@@ -1064,9 +1101,6 @@ END:VCALENDAR`;
                                 <div className="flex justify-around">
                                     {[
                                         { id: 'dashboard', icon: Icons.LayoutDashboard, label: 'Home' },
-                                        // { id: 'list', icon: Icons.FileText, label: 'Report' }, // REMOVED
-                                        // { id: 'followups', icon: Icons.Target, label: 'Offerte' }, // REMOVED
-                                        // { id: 'ideas', icon: Icons.Lightbulb, label: 'Idee' }, // REMOVED
                                         { id: 'stats', icon: Icons.BarChart, label: 'Situazione' },
                                         { id: 'clients', icon: Icons.Users, label: 'Clienti' }
                                     ].map(item => (
