--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             ArrowUpDown: (p) => <IconBase {...p}><path d="m21 16-4 4-4-4"/><path d="m17 20V4"/><path d="m3 8 4-4 4 4"/><path d="m7 4v16"/></IconBase>,
             ClipboardList: (p) => <IconBase {...p}><rect width="8" height="4" x="8" y="2" rx="1" ry="1"/><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"/><path d="M12 11h4"/><path d="M12 16h4"/><path d="M8 11h.01"/><path d="M8 16h.01"/></IconBase>,
             BarChart: (p) => <IconBase {...p}><line x1="12" y1="20" x2="12" y2="10"/><line x1="18" y1="20" x2="18" y2="4"/><line x1="6" y1="20" x2="6" y2="16"/></IconBase>,
-            CheckSquare: (p) => <IconBase {...p}><polyline points="9 11 12 14 22 4"/><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/></IconBase>,
+            CheckSquare: (p) => <IconBase {...p}><polyline points="9 11 12 14 22 4"/><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1-2-2h11"/></IconBase>,
             BookOpen: (p) => <IconBase {...p}><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></IconBase>
         };
 
@@ -1577,7 +1577,94 @@ END:VCALENDAR`;
 
             const handleLogout = () => { localStorage.removeItem('crm_user_key'); setUserKey(''); setIsLoggedIn(false); setView('dashboard'); };
             const handleImport = () => showMessage('Import simulato', 'info'); 
-            const exportToExcel = () => showMessage('Export simulato', 'info'); 
+            
+            // --- FUNZIONE EXPORT EXCEL AGGIORNATA ---
+            const exportToExcel = () => {
+                if (!XLSX) {
+                    showMessage('Libreria Excel non caricata', 'error');
+                    return;
+                }
+
+                const wb = XLSX.utils.book_new();
+
+                // 1. ANAGRAFICA CLIENTI
+                const clientsData = clients.map(c => ({
+                    "ID": c.id,
+                    "Ragione Sociale": c.ragioneSociale,
+                    "P.IVA": c.pIva,
+                    "Telefono": c.telefono,
+                    "Email": c.email,
+                    "Sede Legale": c.sedeLegale,
+                    "Sede Operativa": c.sedeOperativa,
+                    "Settore": c.sector === 'ALTRO' ? c.sectorOther : c.sector,
+                    "Pagamento": [c.paymentMethod1, c.paymentMethod2, c.paymentMethod3].filter(Boolean).join(' - '),
+                    "Fido": c.fido,
+                    "Note": c.note,
+                    "Valutazione": c.rating
+                }));
+                const wsClients = XLSX.utils.json_to_sheet(clientsData);
+                // Imposta larghezza colonne
+                if (clientsData.length > 0) {
+                    wsClients['!cols'] = [
+                        {wch:15}, {wch:30}, {wch:15}, {wch:15}, {wch:25}, {wch:30}, {wch:30}, {wch:20}, {wch:30}, {wch:10}, {wch:40}, {wch:10}
+                    ];
+                }
+                XLSX.utils.book_append_sheet(wb, wsClients, "Anagrafica Clienti");
+
+                // 2. REPORT
+                const reportsData = reports.map(r => ({
+                    "ID": r.id,
+                    "Data": r.date,
+                    "Cliente": r.client,
+                    "Categoria": r.category,
+                    "Tipo": r.contactType,
+                    "Durata (h)": r.hours,
+                    "Descrizione": r.description,
+                    "Appunti Futuri": r.futureNotes,
+                    "Prox Contatto": r.nextContactDate ? `${r.nextContactDate} ${r.nextContactTime || ''}` : ''
+                }));
+                const wsReports = XLSX.utils.json_to_sheet(reportsData);
+                if (reportsData.length > 0) {
+                    wsReports['!cols'] = [
+                        {wch:15}, {wch:12}, {wch:25}, {wch:25}, {wch:15}, {wch:10}, {wch:50}, {wch:40}, {wch:20}
+                    ];
+                }
+                XLSX.utils.book_append_sheet(wb, wsReports, "Report");
+
+                // 3. OFFERTE
+                const offersData = followups.map(f => ({
+                    "ID": f.id,
+                    "Cliente": f.client,
+                    "N. Offerta": f.offerNumber,
+                    "Importo": f.amount,
+                    "Data Riscontro": f.feedbackDate,
+                    "Note": f.notes,
+                    "Stato": f.completed ? "Completato" : "Da Fare"
+                }));
+                const wsOffers = XLSX.utils.json_to_sheet(offersData);
+                if (offersData.length > 0) {
+                    wsOffers['!cols'] = [{wch:15}, {wch:30}, {wch:15}, {wch:10}, {wch:15}, {wch:40}, {wch:10}];
+                }
+                XLSX.utils.book_append_sheet(wb, wsOffers, "Offerte");
+
+                // 4. IDEE
+                const ideasData = ideas.map(i => ({
+                    "ID": i.id,
+                    "Cliente": i.client,
+                    "Descrizione": i.text,
+                    "Scadenza": i.deadline,
+                    "Stato": i.completed ? "Completato" : "Da Fare"
+                }));
+                const wsIdeas = XLSX.utils.json_to_sheet(ideasData);
+                if (ideasData.length > 0) {
+                     wsIdeas['!cols'] = [{wch:15}, {wch:30}, {wch:50}, {wch:15}, {wch:10}];
+                }
+                XLSX.utils.book_append_sheet(wb, wsIdeas, "Idee");
+
+                // SAVE
+                XLSX.writeFile(wb, `Backup_CRM_${new Date().toISOString().slice(0,10)}.xlsx`);
+                showMessage('Backup Excel scaricato con successo!', 'success');
+            };
 
             // ... nav logic and formatDuration ...
             const [touchStart, setTouchStart] = useState(null);
